--- a/.yamato/urp_foundation-win-dx11.yml
+++ b/.yamato/urp_foundation-win-dx11.yml
@@ -13,6 +13,7 @@ URP_Foundation_Win_DX11_Standalone_2020.1:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr.bat --output TestProjects/UniversalGraphicsTest_Foundation/utr.bat
+      -  cd Tools && ls
       -  cd Tools && powershell -command ". .\Unity.ps1; Set-ScreenResolution -width 1920 -Height 1080"
       -  cd TestProjects/UniversalGraphicsTest_Foundation && utr --suite=playmode --platform=StandaloneWindows64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --reruncount=2 --timeout=1200
     artifacts:
