--- a/.yamato/_editor_pinning.yml
+++ b/.yamato/_editor_pinning.yml
@@ -8,7 +8,7 @@
 ---
 
 editor-pinning-target-to-ci:
-    name: Merge master to ci/editor-pinning
+    name: Merge yamato/join-revisions-ep to yamato/join-revisions-ep-ci
     agent:
         type: Unity::VM
         image: package-ci/ubuntu:stable
@@ -19,16 +19,16 @@ editor-pinning-target-to-ci:
       -  echo $GIT_BRANCH
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "master" ]]; then
-                         echo "Should run on 'master' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "yamato/join-revisions-ep" ]]; then
+                         echo "Should run on 'yamato/join-revisions-ep' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git fetch
-      -  git checkout master
-      -  git checkout ci/editor-pinning
+      -  git checkout yamato/join-revisions-ep
+      -  git checkout yamato/join-revisions-ep-ci
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  git merge master --no-ff -X theirs
+      -  git merge yamato/join-revisions-ep --no-ff -X theirs
       -  git push
 editor-pinning-update:
     name: Update pinned editor versions
@@ -47,21 +47,21 @@ editor-pinning-update:
       -  sudo apt-get install yamato-parser -y
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "master" ]]; then
-                         echo "Should run on 'master' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "yamato/join-revisions-ep" ]]; then
+                         echo "Should run on 'yamato/join-revisions-ep' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  pipenv run python3 .yamato/ruamel/editor_pinning/update_revisions.py --target-branch ci/editor-pinning --force-push
+      -  pipenv run python3 .yamato/ruamel/editor_pinning/update_revisions.py --target-branch yamato/join-revisions-ep-ci --force-push
     dependencies:
       -  .yamato/_editor_pinning.yml#editor-pinning-target-to-ci
     triggers:
         recurring:
-          -  branch: master
+          -  branch: yamato/join-revisions-ep
              frequency: 0 * * ?
 editor-pinning-merge-revisions-trunk:
-    name: Merge [trunk] revisions to master [no ABV]
+    name: Merge [trunk] revisions to yamato/join-revisions-ep [no ABV]
     agent:
         type: Unity::VM
         image: package-ci/ubuntu:stable
@@ -77,15 +77,15 @@ editor-pinning-merge-revisions-trunk:
       -  sudo apt-get install yamato-parser -y
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "ci/editor-pinning" ]]; then
-                         echo "Should run on 'ci/editor-pinning' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "yamato/join-revisions-ep-ci" ]]; then
+                         echo "Should run on 'yamato/join-revisions-ep-ci' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  pipenv run python3 .yamato/ruamel/editor_pinning/merge_revisions.py --revision $GIT_REVISION --target-branch master --track trunk
+      -  pipenv run python3 .yamato/ruamel/editor_pinning/merge_revisions.py --revision $GIT_REVISION --target-branch yamato/join-revisions-ep --track trunk
 editor-pinning-merge-revisions-trunk-abv:
-    name: Merge [trunk] revisions to master [ABV]
+    name: Merge [trunk] revisions to yamato/join-revisions-ep [ABV]
     allow_failure: true
     dependencies:
       -  .yamato/_abv.yml#all_project_ci_trunk
@@ -104,13 +104,13 @@ editor-pinning-merge-revisions-trunk-abv:
       -  sudo apt-get install yamato-parser -y
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "ci/editor-pinning" ]]; then
-                         echo "Should run on 'ci/editor-pinning' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "yamato/join-revisions-ep-ci" ]]; then
+                         echo "Should run on 'yamato/join-revisions-ep-ci' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  pipenv run python3 .yamato/ruamel/editor_pinning/merge_revisions.py --revision $GIT_REVISION --target-branch master --track trunk
+      -  pipenv run python3 .yamato/ruamel/editor_pinning/merge_revisions.py --revision $GIT_REVISION --target-branch yamato/join-revisions-ep --track trunk
 editor-pinning-merge-all:
     name: Merge all [no ABV] [no CI]
     variables:
@@ -120,7 +120,7 @@ editor-pinning-merge-all:
 editor-pinning-merge-all-abv:
     name: Merge all [ABV] [CI]
     triggers:
-        expression: push.branch eq "ci/editor-pinning" AND push.changes.any match "**/_latest_editor_versions*.metafile"
+        expression: push.branch eq "yamato/join-revisions-ep-ci" AND push.changes.any match "**/_latest_editor_versions*.metafile"
     variables:
         CI: true
     dependencies:
